cabal-version:      3.4
name:               cuddle
version:            0.1.0.0
synopsis:           CDDL Generator and test utilities
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             IOG Ledger Team
maintainer:         nicholas.clarke@iohk.io
-- copyright:
category:           Codec
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Codec.CBOR.Cuddle.CDDL
        Codec.CBOR.Cuddle.Pretty
    other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        bytestring,
        cborg,
        megaparsec,
        parser-combinators,
        prettyprinter,
        text
    hs-source-dirs:   src
    default-language: GHC2021

executable example
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   example
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.3.0,
        cuddle,
        prettyprinter

test-suite cuddle-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.16.3.0,
        cuddle,
        prettyprinter
