cabal-version:   3.4
name:            cuddle
version:         0.1.0.0
synopsis:        CDDL Generator and test utilities

-- description:
license:         Apache-2.0
license-file:    LICENSE
author:          IOG Ledger Team
maintainer:      nicholas.clarke@iohk.io

-- copyright:
category:        Codec
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Codec.CBOR.Cuddle.Builder
        Codec.CBOR.Cuddle.CBOR.Gen
        Codec.CBOR.Cuddle.CDDL
        Codec.CBOR.Cuddle.CDDL.CtlOp
        Codec.CBOR.Cuddle.CDDL.CTree
        Codec.CBOR.Cuddle.CDDL.Postlude
        Codec.CBOR.Cuddle.CDDL.Resolve
        Codec.CBOR.Cuddle.Huddle
        Codec.CBOR.Cuddle.Parser
        Codec.CBOR.Cuddle.Pretty

    other-modules:

    -- other-extensions:
    build-depends:
        , base                ^>=4.16.3.0 || ^>=4.18.1.0
        , bytestring
        , capability
        , cborg
        , containers
        , data-default-class
        , generic-optics
        , hashable
        , megaparsec
        , mtl
        , mutable-containers
        , optics-core
        , parser-combinators
        , prettyprinter
        , random
        , text

    hs-source-dirs:   src
    default-language: GHC2021

executable example
    import:           warnings
    default-language: GHC2021

    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   example
    main-is:          Main.hs
    build-depends:
        , base           ^>=4.16.3.0 || ^>=4.18.1.0
        , cuddle
        , megaparsec
        , prettyprinter
        , random
        , text

executable cuddle
    import:           warnings
    default-language: GHC2021
    hs-source-dirs:   ./bin/
    main-is:          Main.hs
    build-depends:
        , base                  ^>=4.16.3.0 || ^>=4.18.1.0
        , cborg
        , cuddle
        , megaparsec
        , optparse-applicative
        , prettyprinter
        , random
        , text

test-suite cuddle-test
    import:           warnings
    default-language: GHC2021
    other-modules:    Test.Codec.CBOR.Cuddle.Huddle

    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        , base              ^>=4.16.3.0 || ^>=4.18.1.0
        , cuddle
        , hspec
        , hspec-megaparsec
        , megaparsec
        , prettyprinter
        , text
